After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791137 - Python application template does not work on host
Python application template does not work on host
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: libide
Flatpak Nightly Channel
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-12-02 16:50 UTC by elias
Modified: 2017-12-02 21:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
runtime: use full path to target binary (1.50 KB, patch)
2017-12-02 21:38 UTC, Christian Hergert
committed Details | Review

Description elias 2017-12-02 16:50:41 UTC
If I create a python GNOME project using the template offered by gnome-builder, it works with flatpak. However, if I select the host system and try to build/run it, no window shows up and there isn't even an error message.
Comment 1 Christian Hergert 2017-12-02 21:38:08 UTC
Created attachment 364835 [details] [review]
runtime: use full path to target binary

Even if the binary path is not-relative using ../, we could still need to
prepend the install-dir as it might not be in $PATH.
Comment 2 Christian Hergert 2017-12-02 21:38:31 UTC
Thanks for reporting!

Attachment 364835 [details] pushed as ca48d93 - runtime: use full path to target binary