runtime: use full path to target binary

Even if the binary path is not-relative using ../, we could still need to
prepend the install-dir as it might not be in $PATH.

https://bugzilla.gnome.org/show_bug.cgi?id=791137